TAG: uniprotload-6-0-26-?
DATE: 07/22/2024
STAFF: lec
CHANGES:
wts2-1555/e4g-314/Cross-references changes in UniProt
        new file:   bin/postUniProt.py
        new file:   bin/postUniProt.sh
        modified:   bin/uniprotload.sh

TAG: uniprotload-6-0-23-1
DATE: 03/29/2024
STAFF: lec
CHANGES:
wts2-1155/GOC taking over GOA mouse, GOA human, etc.
wts2-575/fl2-743/Add GlyGen links to MGI gene detail pages (TR13475)
#       deleted:    bin/makeGOAnnot.py
#       deleted:    bin/makeGOAnnot.sh
#       deleted:    goecannot.config.default
#       deleted:    goipannot.config.default
#       deleted:    gospkwannot.config.default
#       modified:   bin/uniprotload.sh

TAG: uniprotload-6-0-18-1
DATE: 03/07/2022
STAFF: lec
CHANGES:
wts2-703/new Noctua -> GO Annotation pipeline
bin/makeInterProtAnnot.sh ; change from full vocab to incremental vocab

TAG: uniprotload-6-0-16-1
DATE: 08/21/2020
STAFF: sc
CHANGES: TR13204/I20 project/python 3.7 upgrade

TAG: uniprotload-6-0-15-1
DATE: 07/22/2020
STAFF: lec
CHANGES:
1) bin/makeMGIAssocFile.py: Replace SQL that was causing performance issues
                            with postgres 12

TAG: uniprotload-6-0-14-1
DATE: 08/20/2019
STAFF: lec
CHANGES:
TR13150/bin/makeGOAnnot.py: ignore EC ids that contain "-"

TAG: uniprotload-6-0-11-3
DATE: 01/04/2018
STAFF: sc
CHANGES: 
1) TR12697 - add to override QC input lines where input 
    symbol does not match database
2) TR12599 - add dos2unix to convert input file

TAG: uniprotload-6-0-11-2
DATE: 11/01/2017
STAFF: sc
CHANGES: TR12627 - add processing of ldb column in input file

TAG: uniprotload-6-0-11-1
DATE: 10/11/2017
STAFF: sc
CHANGES: merge tr12624 branch to master
1) makeBuckets.py - added loading of the N:1 bucket

TAG: uniprotload-tr12624-BP
DATE: 09/27/2017
STAFF: sc
CHANGES: Branch Point tag for loading of N-1 bucket

TAG: uniprotload-6-0-10-1
DATE: 08/02/2017
STAFF: lec 
CHANGES:
1) TR12624/handle Ensembl issue in "DR" tag
see TR for complete details