@@ -141,6 +141,9 @@ MARKER_GG_ASSOC_FILE=${OUTPUTDIR}/marker_gg_annot.txt
 MARKER_GG_ASSOC_ERR_FILE=${OUTPUTDIR}/marker_gg_annot_err.txt
 MARKER_GG_ANNOT_REF=J:345062
 
+GCRP_FILE=${DATADOWNLOADS}/ftp.uniprot.org/pub/databases/uniprot/current_release/knowledgebase/reference_proteomes/Eukaryota/UP000000589/UP000000589_10090.fasta.gz
+GCRP_IDS_TXT=${OUTPUTDIR}/gcrp_ids.txt
+
 export ANNOTLOADER_CSH ANNOT_EVIDENCECODE ANNOT_EDITOR ANNOT_DATE 
 export ANNOT_NOTE ANNOT_NOTEPREFIX
 export ANNOT_PROPERTY ANNOT_PROPERTYPREFIX
@@ -149,6 +152,7 @@ export GO_IP_ASSOC_FILE GO_IP_ANNOT_REF
 export GO_SPKW_ASSOC_FILE GO_SPKW_ANNOT_REF
 export MARKER_IP_ASSOC_FILE MARKER_IP_ANNOT_REF
 export GLYGEN_FILE UNIPROT_GG_ASSOC_FILE MARKER_GG_ASSOC_FILE MARKER_GG_ASSOC_ERR_FILE MARKER_GG_ANNOT_REF
+export GCRP_FILE GCRP_IDS_TXT
 
 ###########################################################################
 #
