@@ -2,6 +2,7 @@ TAG: uniprotload-6-0-26-?
 DATE: 07/22/2024
 STAFF: lec
 CHANGES:
+Gene-Centric Reference Proteome
 wts2-1555/e4g-314/Cross-references changes in UniProt
         new file:   bin/postUniProt.py
         new file:   bin/postUniProt.sh
